[gd_scene load_steps=5 format=3 uid="uid://b7xkf6ts56sr6"]

[ext_resource type="Script" uid="uid://skvtuyqvgwoq" path="res://Script/addvalue_ui.gd" id="1_xbakm"]
[ext_resource type="Texture2D" uid="uid://dnv6ep53hkx7" path="res://Sprite/S_Button1.png" id="2_m2x3l"]
[ext_resource type="Script" uid="uid://cqoq8ogtcbspm" path="res://Script/button.gd" id="3_1alkk"]
[ext_resource type="Theme" uid="uid://b6yfl8n2aao2j" path="res://Theme/theme1.tres" id="4_ub8xq"]

[node name="AddValueUI" type="Node2D"]
process_mode = 3
script = ExtResource("1_xbakm")
metadata/_edit_group_ = true

[node name="PauseOverlay" type="CanvasLayer" parent="."]
process_mode = 1

[node name="ColorRect" type="ColorRect" parent="PauseOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.23529412)

[node name="ExitTexture" type="TextureRect" parent="PauseOverlay"]
offset_left = 1060.0
offset_top = 762.0
offset_right = 3060.0
offset_bottom = 1786.0
scale = Vector2(0.30286574, 0.30286574)
texture = ExtResource("2_m2x3l")
expand_mode = 1

[node name="ExitButton" type="Button" parent="PauseOverlay/ExitTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 293.85938
offset_top = 289.76523
offset_right = 293.85938
offset_bottom = -84.23474
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7026317, 0.7026317)
script = ExtResource("3_1alkk")

[node name="Label" type="Label" parent="PauseOverlay/ExitTexture/ExitButton"]
layout_mode = 0
offset_left = -399.43024
offset_top = 1.128048
offset_right = -15.430237
offset_bottom = 65.12807
scale = Vector2(7.5950103, 7.5950103)
theme = ExtResource("4_ub8xq")
text = "No"
horizontal_alignment = 1

[node name="SubmitTexture2" type="TextureRect" parent="PauseOverlay"]
offset_left = 363.0
offset_top = 762.0
offset_right = 2363.0
offset_bottom = 1786.0
scale = Vector2(0.303, 0.303)
texture = ExtResource("2_m2x3l")
expand_mode = 1

[node name="SubmitButton" type="Button" parent="PauseOverlay/SubmitTexture2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 283.82837
offset_top = 289.76523
offset_right = 283.8286
offset_bottom = -84.23474
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7092447, 0.7092447)
script = ExtResource("3_1alkk")

[node name="Label" type="Label" parent="PauseOverlay/SubmitTexture2/SubmitButton"]
layout_mode = 0
offset_left = -279.1981
offset_top = 5.589039
offset_right = 104.80191
offset_bottom = 69.58905
scale = Vector2(6.8673644, 6.8673644)
theme = ExtResource("4_ub8xq")
text = "Yes"
horizontal_alignment = 1

[node name="PlayerName" type="LineEdit" parent="PauseOverlay"]
visible = false
offset_left = 395.0
offset_top = 449.0
offset_right = 645.0
offset_bottom = 499.0
scale = Vector2(4.5159173, 4.5159173)
theme = ExtResource("4_ub8xq")
theme_override_font_sizes/font_size = 30
placeholder_text = "Name"
max_length = 8

[node name="Label" type="Label" parent="PauseOverlay"]
offset_left = 228.0
offset_top = 109.00001
offset_right = 1252.0
offset_bottom = 190.0
scale = Vector2(2.6057174, 2.6057174)
theme = ExtResource("4_ub8xq")
theme_override_font_sizes/font_size = 70
text = "Save Your Score?"

[connection signal="pressed" from="PauseOverlay/ExitTexture/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PauseOverlay/SubmitTexture2/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="focus_entered" from="PauseOverlay/PlayerName" to="." method="_on_player_name_focus_entered"]
[connection signal="focus_exited" from="PauseOverlay/PlayerName" to="." method="_on_player_name_focus_exited"]
